<resources>
    <string name="app_name">MtsTetaAndroid</string>
    <string name="restriction_age">18+</string>
    <string name="film_date">22.04.21</string>
    <string name="film_genre">боевик</string>
    <string name="film_name">Гнев человеческий</string>
    <string name="film_description">Эйч — загадочный и холодный на вид джентльмен, но внутри него пылает жажда справедливости. Преследуя свои мотивы, он внедряется в инкассаторскую компанию, чтобы выйти на соучастников серии многомиллионных ограблений, потрясших Лос-Анджелес. В этой запутанной игре у каждого своя роль, но под подозрением оказываются все. Виновных же обязательно постигнет гнев человеческий.</string>
    <string name="actors_string">Актеры</string>
    <string name="actor_name_jason_statham">Джейсон Стейтем</string>
    <string name="actor_name_holt_mc_callany">Холт Маккэллани</string>
    <string name="actor_name_josh_hartnett">Джош Харнетт</string>
    <string name="main_empty_message">empty toast</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>