<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movieDetails.DetailsFragment">

    <Space
        android:id="@+id/negative_margin"
        android:layout_width="16dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintRight_toLeftOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ImageView.Corner"
        app:srcCompat="@drawable/image_jason_statham" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="260dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textViewMovieAgeRestrictions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_text_view_age_restrictions"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/restriction_age"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/ratingBarMovieRatingDetails"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:text="@string/film_date"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/textViewFilmName"
                app:layout_constraintStart_toEndOf="@id/textViewFilmGenre"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewFilmGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_text_view_film_genre"
                android:text="@string/film_genre"
                android:textColor="@color/black"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@id/textViewFilmName"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewFilmName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/film_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/ratingBarMovieRatingDetails"
                app:layout_constraintStart_toStartOf="parent" />

            <RatingBar
                android:id="@+id/ratingBarMovieRatingDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:clickable="false"
                android:isIndicator="true"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:numStars="5"
                android:progressDrawable="@null"
                android:rating="3"
                android:stepSize="0.5"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="36dp"
                android:text="@string/film_description"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/textViewActors"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewActors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="16dp"
                android:text="@string/actors_string"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/RecyclerViewActors"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/RecyclerViewActors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:fillViewport="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>