<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".MainActivity">


    <Space
        android:id="@+id/negative_margin"
        android:layout_width="16dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintRight_toLeftOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ImageView.Corner"
        app:srcCompat="@drawable/jason_statham" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view2"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#020202"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/imageViewHome"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_home" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view">

        <ImageView
            android:id="@+id/imageViewUser"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_user" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/negative_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <TextView
                android:id="@+id/textViewAgeRestrictions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_text_view_age_restrictions"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/restriction_age"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/imageViewStar1"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:text="@string/film_date"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/textViewFilmName"
                app:layout_constraintStart_toEndOf="@id/textViewFilmGenre"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewFilmGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_text_view_film_genre"
                android:text="@string/film_genre"
                android:textColor="@color/black"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@id/textViewFilmName"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewFilmName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/film_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/imageViewStar1"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageViewStar1"
                android:layout_width="16dp"
                android:layout_height="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_star" />

            <ImageView
                android:id="@+id/imageViewStar2"
                android:layout_width="16dp"
                android:layout_height="15dp"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintStart_toEndOf="@id/imageViewStar1"
                app:srcCompat="@drawable/ic_star" />

            <ImageView
                android:id="@+id/imageViewStar3"
                android:layout_width="16dp"
                android:layout_height="15dp"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintStart_toEndOf="@id/imageViewStar2"
                app:srcCompat="@drawable/ic_star" />

            <ImageView
                android:id="@+id/imageViewStar4"
                android:layout_width="16dp"
                android:layout_height="15dp"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintStart_toEndOf="@id/imageViewStar3"
                app:srcCompat="@drawable/ic_star" />

            <ImageView
                android:id="@+id/imageViewStar5"
                android:layout_width="16dp"
                android:layout_height="15dp"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintStart_toEndOf="@id/imageViewStar4"
                app:srcCompat="@drawable/ic_star_empty" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="36dp"
                android:text="@string/film_description"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/textViewActors"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewActors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="16dp"
                android:text="@string/actors_string"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/horizontalScrollViewActors"
                app:layout_constraintStart_toStartOf="parent" />

            <HorizontalScrollView

                android:id="@+id/horizontalScrollViewActors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:fillViewport="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintHorizontal_bias="1.0">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardViewActor1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        app:cardBackgroundColor="@android:color/transparent"
                        app:cardElevation="0dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/imageViewActor1"
                                android:layout_width="150dp"
                                android:layout_height="196dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/jason_statham_actor" />

                            <TextView
                                android:id="@+id/textViewActorName1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/actor_name_jason_statham"
                                android:textColor="@color/black"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/imageViewActor1" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardViewActor2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        app:cardBackgroundColor="@android:color/transparent"
                        app:cardElevation="0dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/imageViewActor2"
                                android:layout_width="150dp"
                                android:layout_height="196dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/holt_mccallany_actor" />

                            <TextView
                                android:id="@+id/textViewActorName2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/actor_name_holt_mc_callany"
                                android:textColor="@color/black"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/imageViewActor2" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardViewActor3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        app:cardBackgroundColor="@android:color/transparent"
                        app:cardElevation="0dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/imageViewActor3"
                                android:layout_width="150dp"
                                android:layout_height="196dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/josh_hartnett_actor" />

                            <TextView
                                android:id="@+id/textViewActorName3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/actor_name_josh_hartnett"
                                android:textColor="@color/black"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/imageViewActor3" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>
            </HorizontalScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>